curri index.html

--- a/index.html
+++ b/index.html
@@ -29,7 +29,15 @@
       </ul>        
       </nav>    
       </header>
-
+          <font size = "5" color "#aa55ee">
+<hr size="10" color="beige">
+<font size="6" color="black" font-family:arial>  
+    <p><center> <h2>ℂ𝕌ℝℝ𝕀ℂ𝕌𝕃𝕌𝕄 𝕍𝕀𝕋𝔸𝔼</h2> </p>            
+<p><center> <h3>𝓢𝓱𝓮𝓲𝓵𝔂 𝓨𝓪𝓷𝓮𝓽𝓱 𝓑𝓪𝓾𝓽𝓲𝓼𝓽𝓪 𝓙𝓲𝓶𝓮𝓷𝓮𝔃</h3> </p>
+<img src="marce.jpg" width=200></center>
+<hr size="10" color="brown">
+<br>
+<hr size="12" color="beige">
 
 </body>
 </html>
