--- a/index.html
+++ b/index.html
@@ -38,6 +38,42 @@
 <hr size="10" color="brown">
 <br>
 <hr size="12" color="beige">
+    <html lang="en">
+    <head>
+        <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>CURRICULUM VITAE</title>
+        <link rel="stylesheet" href="css/index.css">
+        <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&family=Protest+Revolution&display=swap" rel="stylesheet">
+
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Document</title>
+        <link rel="stylesheet" href="estilo.css">
+    </head>
+  <body> 
+    <header class="header">
+        <nav class="nav">
+            <img src="avatar.jpg" width="130" height=80">
+            <a href="#" class="logo navml">logo</a>
+            <button class="btn"><i class="fa fa-bars"></i></button>
+          </button>
+                <ul class="nav-menu">
+                    <li class="nmi"><a href="indice.html" class="nml navml">Inicio</a></li>
+                    <li class="nmi"><a href="Datos.html" class="nml navml">Datos personales</a></li>
+                    <li class="nmi"><a href="Estudios.html" class="nml navml">Estudios Academicos</a></li>
+                    <li class="nmi"><a href="Sobremí.html" class="nml navml">Sobre mí</a></li>
+                    <li class="nmi"><a href="Referencias.html" class="nml navml">Referencias personales</a></li>
+                    <li class="nmi"><a href="Experiencia.html" class="nml navml">Experiencia Laboral</a></li>
+                    </ul>
+                    </nav>
+                </header>
+                <script src="https://kit.fontawesome.com/722759ebe3.js" crossorigin="anonymous"></script>
+
+         
+</body>
+</html>
 
 </body>
 </html>
